// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulCollapse > 快照测试 > 基础折叠面板快照 1`] = `
<DocumentFragment>
  <div
    class="delightful-collapse delightful-collapse-icon-position-end delightful-collapse-borderless delightful-collapse-ghost acss-1up74ee css-dev-only-do-not-override-yotw4n css-var-r1"
  >
    <div
      class="delightful-collapse-item"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="delightful-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="delightful-collapse-expand-icon"
        >
          <svg
            class="tabler-icon tabler-icon-chevron-right delightful-collapse-arrow"
            fill="none"
            height="24"
            stroke="rgba(28,29,35, 0.8)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            style="transform: rotate(0deg); transition: transform 0.35s cubic-bezier(0.215, 0.61, 0.355, 1);"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 6l6 6l-6 6"
            />
          </svg>
        </div>
        <span
          class="delightful-collapse-header-text"
        >
          标题1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulCollapse > 快照测试 > 多个面板折叠快照 1`] = `
<DocumentFragment>
  <div
    class="delightful-collapse delightful-collapse-icon-position-end delightful-collapse-borderless delightful-collapse-ghost acss-1up74ee css-dev-only-do-not-override-yotw4n css-var-r2"
  >
    <div
      class="delightful-collapse-item"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="delightful-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="delightful-collapse-expand-icon"
        >
          <svg
            class="tabler-icon tabler-icon-chevron-right delightful-collapse-arrow"
            fill="none"
            height="24"
            stroke="rgba(28,29,35, 0.8)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            style="transform: rotate(0deg); transition: transform 0.35s cubic-bezier(0.215, 0.61, 0.355, 1);"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 6l6 6l-6 6"
            />
          </svg>
        </div>
        <span
          class="delightful-collapse-header-text"
        >
          标题1
        </span>
      </div>
    </div>
    <div
      class="delightful-collapse-item"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="delightful-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="delightful-collapse-expand-icon"
        >
          <svg
            class="tabler-icon tabler-icon-chevron-right delightful-collapse-arrow"
            fill="none"
            height="24"
            stroke="rgba(28,29,35, 0.8)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            style="transform: rotate(0deg); transition: transform 0.35s cubic-bezier(0.215, 0.61, 0.355, 1);"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 6l6 6l-6 6"
            />
          </svg>
        </div>
        <span
          class="delightful-collapse-header-text"
        >
          标题2
        </span>
      </div>
    </div>
    <div
      class="delightful-collapse-item"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="delightful-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="delightful-collapse-expand-icon"
        >
          <svg
            class="tabler-icon tabler-icon-chevron-right delightful-collapse-arrow"
            fill="none"
            height="24"
            stroke="rgba(28,29,35, 0.8)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            style="transform: rotate(0deg); transition: transform 0.35s cubic-bezier(0.215, 0.61, 0.355, 1);"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 6l6 6l-6 6"
            />
          </svg>
        </div>
        <span
          class="delightful-collapse-header-text"
        >
          标题3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulCollapse > 快照测试 > 小尺寸折叠面板快照 1`] = `
<DocumentFragment>
  <div
    class="delightful-collapse delightful-collapse-icon-position-end delightful-collapse-borderless delightful-collapse-ghost delightful-collapse-small acss-1up74ee css-dev-only-do-not-override-yotw4n css-var-r7"
  >
    <div
      class="delightful-collapse-item"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="delightful-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="delightful-collapse-expand-icon"
        >
          <svg
            class="tabler-icon tabler-icon-chevron-right delightful-collapse-arrow"
            fill="none"
            height="24"
            stroke="rgba(28,29,35, 0.8)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            style="transform: rotate(0deg); transition: transform 0.35s cubic-bezier(0.215, 0.61, 0.355, 1);"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 6l6 6l-6 6"
            />
          </svg>
        </div>
        <span
          class="delightful-collapse-header-text"
        >
          标题1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulCollapse > 快照测试 > 带图标面板快照 1`] = `
<DocumentFragment>
  <div
    class="delightful-collapse delightful-collapse-icon-position-end delightful-collapse-borderless delightful-collapse-ghost acss-1up74ee css-dev-only-do-not-override-yotw4n css-var-r5"
  >
    <div
      class="delightful-collapse-item"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="delightful-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="delightful-collapse-expand-icon"
        >
          <svg
            class="tabler-icon tabler-icon-chevron-right delightful-collapse-arrow"
            fill="none"
            height="24"
            stroke="rgba(28,29,35, 0.8)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            style="transform: rotate(0deg); transition: transform 0.35s cubic-bezier(0.215, 0.61, 0.355, 1);"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 6l6 6l-6 6"
            />
          </svg>
        </div>
        <span
          class="delightful-collapse-header-text"
        >
          标题1
        </span>
        <div
          class="delightful-collapse-extra"
        >
          <span>
            📝
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulCollapse > 快照测试 > 手风琴模式快照 1`] = `
<DocumentFragment>
  <div
    class="delightful-collapse delightful-collapse-icon-position-end delightful-collapse-borderless delightful-collapse-ghost acss-1up74ee css-dev-only-do-not-override-yotw4n css-var-r4"
    role="tablist"
  >
    <div
      class="delightful-collapse-item"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="delightful-collapse-header"
        role="tab"
        tabindex="0"
      >
        <div
          class="delightful-collapse-expand-icon"
        >
          <svg
            class="tabler-icon tabler-icon-chevron-right delightful-collapse-arrow"
            fill="none"
            height="24"
            stroke="rgba(28,29,35, 0.8)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            style="transform: rotate(0deg); transition: transform 0.35s cubic-bezier(0.215, 0.61, 0.355, 1);"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 6l6 6l-6 6"
            />
          </svg>
        </div>
        <span
          class="delightful-collapse-header-text"
        >
          标题1
        </span>
      </div>
    </div>
    <div
      class="delightful-collapse-item"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="delightful-collapse-header"
        role="tab"
        tabindex="0"
      >
        <div
          class="delightful-collapse-expand-icon"
        >
          <svg
            class="tabler-icon tabler-icon-chevron-right delightful-collapse-arrow"
            fill="none"
            height="24"
            stroke="rgba(28,29,35, 0.8)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            style="transform: rotate(0deg); transition: transform 0.35s cubic-bezier(0.215, 0.61, 0.355, 1);"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 6l6 6l-6 6"
            />
          </svg>
        </div>
        <span
          class="delightful-collapse-header-text"
        >
          标题2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulCollapse > 快照测试 > 禁用面板快照 1`] = `
<DocumentFragment>
  <div
    class="delightful-collapse delightful-collapse-icon-position-end delightful-collapse-borderless delightful-collapse-ghost acss-1up74ee css-dev-only-do-not-override-yotw4n css-var-r6"
  >
    <div
      class="delightful-collapse-item delightful-collapse-item-disabled"
      disabled=""
    >
      <div
        aria-disabled="true"
        aria-expanded="false"
        class="delightful-collapse-header delightful-collapse-collapsible-disabled"
        role="button"
        tabindex="-1"
      >
        <div
          class="delightful-collapse-expand-icon"
        >
          <svg
            class="tabler-icon tabler-icon-chevron-right delightful-collapse-arrow"
            fill="none"
            height="24"
            stroke="rgba(28,29,35, 0.8)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            style="transform: rotate(0deg); transition: transform 0.35s cubic-bezier(0.215, 0.61, 0.355, 1);"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 6l6 6l-6 6"
            />
          </svg>
        </div>
        <span
          class="delightful-collapse-header-text"
        >
          标题1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelightfulCollapse > 快照测试 > 默认展开面板快照 1`] = `
<DocumentFragment>
  <div
    class="delightful-collapse delightful-collapse-icon-position-end delightful-collapse-borderless delightful-collapse-ghost acss-1up74ee css-dev-only-do-not-override-yotw4n css-var-r3"
  >
    <div
      class="delightful-collapse-item delightful-collapse-item-active"
    >
      <div
        aria-disabled="false"
        aria-expanded="true"
        class="delightful-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="delightful-collapse-expand-icon"
        >
          <svg
            class="tabler-icon tabler-icon-chevron-right delightful-collapse-arrow"
            fill="none"
            height="24"
            stroke="rgba(28,29,35, 0.8)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            style="transform: rotate(90deg); transition: transform 0.35s cubic-bezier(0.215, 0.61, 0.355, 1);"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 6l6 6l-6 6"
            />
          </svg>
        </div>
        <span
          class="delightful-collapse-header-text"
        >
          标题1
        </span>
      </div>
      <div
        class="delightful-collapse-content delightful-collapse-content-active"
      >
        <div
          class="delightful-collapse-content-box"
        >
          内容1
        </div>
      </div>
    </div>
    <div
      class="delightful-collapse-item"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="delightful-collapse-header"
        role="button"
        tabindex="0"
      >
        <div
          class="delightful-collapse-expand-icon"
        >
          <svg
            class="tabler-icon tabler-icon-chevron-right delightful-collapse-arrow"
            fill="none"
            height="24"
            stroke="rgba(28,29,35, 0.8)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
            style="transform: rotate(0deg); transition: transform 0.35s cubic-bezier(0.215, 0.61, 0.355, 1);"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9 6l6 6l-6 6"
            />
          </svg>
        </div>
        <span
          class="delightful-collapse-header-text"
        >
          标题2
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
